# android-sdk

./: .gitignore  README.md  THIRD_PARTY_LICENSE.txt
docs/: CNAME
docs/ai-noise-canceller/: index.html  navigation.html
docs/ai-noise-canceller/-sky-way -android -a-i -noise -canceller/: package-list
docs/ai-noise-canceller/scripts/: pages.json  sourceset_dependencies.js
docs/core/: index.html  navigation.html
docs/core/core/: package-list
docs/core/scripts/: pages.json
docs/room/: index.html  navigation.html
docs/room/-sky-way -android -s-d-k/: package-list
docs/room/room/: package-list
docs/room/scripts/: pages.json  sourceset_dependencies.js
docs/room/styles/: logo-styles.css
docs/sfubot/: index.html  navigation.html
docs/sfubot/scripts/: pages.json  sourceset_dependencies.js
docs/sfubot/sfubot/: package-list
docs/video-processors/: index.html  navigation.html
docs/video-processors/-sky-way -android -video -processors/: package-list
docs/video-processors/scripts/: pages.json  sourceset_dependencies.js
docs/video-processors/styles/: styles.css
examples/: README.md
examples/AndroidView/AutoSubscribe/: settings.gradle
examples/AndroidView/P2PRoom/: build.gradle  settings.gradle
examples/AndroidView/QuickStart/: build.gradle
examples/AndroidView/SFURoom/: settings.gradle
examples/AndroidView/SkyWayExamples/: .gitignore  build.gradle  settings.gradle
examples/AutoSubscribe/: build.gradle  settings.gradle
examples/AutoSubscribe/app/: build.gradle
examples/JetpackCompose/AutoSubscribe/: settings.gradle.kts
examples/JetpackCompose/P2PRoom/: settings.gradle.kts
examples/JetpackCompose/QuickStart/: settings.gradle.kts
examples/JetpackCompose/SFURoom/: settings.gradle.kts
examples/JetpackCompose/SkyWayComposeExamples/: settings.gradle.kts
examples/P2PRoom/: build.gradle  settings.gradle
examples/P2PRoom/app/: build.gradle
examples/QuickStart/: build.gradle  settings.gradle
examples/QuickStart/app/: build.gradle
examples/SFURoom/: settings.gradle
examples/SFURoom/app/: build.gradle
project/skyway_android_sdk/: build.gradle  gradle.properties  settings.gradle
project/skyway_android_sdk/app/: build.gradle
project/skyway_android_sdk/authtoken/: build.gradle
project/skyway_android_sdk/core/: build.gradle
project/skyway_android_sdk/core/src/main/cpp/: CMakeLists.txt
project/skyway_android_sdk/core/src/main/cpp/skyway_android/: skyway_android.cpp  skyway_android.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/: event_listener.cpp  event_listener.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/channel/: channel_util.cpp  channel_util.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/channel/channel/: channel_bridge.cpp  channel_bridge.hpp  channel_event_listener.cpp  channel_event_listener.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/channel/member/: local_person_bridge.cpp  local_person_bridge.hpp  local_person_event_listener.cpp  local_person_event_listener.hpp  member_bridge.cpp  member_bridge.hpp  member_event_listener.cpp  member_event_listener.hpp  remote_member_bridge.cpp  remote_member_bridge.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/channel/publication/: publication_bridge.cpp  publication_bridge.hpp  publication_event_listener.cpp  publication_event_listener.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/channel/subscription/: subscription_bridge.cpp  subscription_bridge.hpp  subscription_event_listener.cpp  subscription_event_listener.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/content/: content_util.cpp  content_util.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/content/local/: data_stream_bridge.cpp  data_stream_bridge.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/content/local/source/: audio_source_bridge.cpp  audio_source_bridge.hpp  data_source_bridge.cpp  data_source_bridge.hpp  video_source_bridge.cpp  video_source_bridge.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/content/remote/: audio_stream_bridge.cpp  audio_stream_bridge.hpp  data_stream_bridge.cpp  data_stream_bridge.hpp  data_stream_listener.cpp  date_stream_listener.hpp  video_stream_bridge.cpp  video_stream_bridge.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/context/: auth_token_manager_event_listener.cpp  auth_token_manager_event_listener.hpp  context_bridge.cpp  context_bridge.hpp  context_event_listener.cpp  context_event_listener.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/network/: http_client.cpp  http_client.hpp  websocket_client.cpp  websocket_client.hpp  websocket_client_factory.cpp  websocket_client_factory.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/platform/: platform_info_delegator.cpp  platform_info_delegator.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/core/util/: call_java_method.hpp  jstring_to_string.cpp  jstring_to_string.hpp  logger.cpp  logger.hpp  native_to_jlong.cpp  native_to_jlong.hpp  register_methods_helper.cpp  register_methods_helper.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/plugin/remote_person_plugin/: remote_person_bridge.cpp  remote_person_bridge.hpp
project/skyway_android_sdk/core/src/main/cpp/skyway_android/plugin/sfu_bot_plugin/: forwarding_bridge.cpp  forwarding_bridge.hpp  sfu_bot_bridge.cpp  sfu_bot_bridge.hpp
project/skyway_android_sdk/libskywaytest/: build.gradle
project/skyway_android_sdk/libskywaytest/src/main/cpp/: CMakeLists.txt  nativetest.cpp
project/skyway_android_sdk/libskywaytest/src/main/cpp/util/: test_event_listener.cpp  test_event_listener.hpp
project/skyway_android_sdk/libskywaytest/src/main/cpp/wrapper/: http_client.cpp  http_client.hpp  logger.cpp  logger.hpp  platform_info_delegator.cpp  platform_info_delegator.hpp  websocket_client_factory.cpp  websocket_client_factory.hpp
(+2009 files in other folders)
